fix alignment

--- a/src/implementations/vanilla/components/site-header/site-header-ec.scss
+++ b/src/implementations/vanilla/components/site-header/site-header-ec.scss
@@ -321,7 +321,10 @@ $menu-top: calc(44px + 2 * var(--s-xs));
   .ecl-site-header__login-toggle,
   .ecl-site-header__search-toggle,
   .ecl-site-header__language-selector {
+    align-items: center;
+    display: flex;
     font-size: 0;
+    justify-content: center;
     line-height: 0;
     padding: var(--s-xs) 0;
 
